--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Седона</title>
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8">
+		<title>Седона</title>
+	</head>
+	
+<body>
+	
 <header>
-	<ul>
-		<li><a href="#">Информация</a></li>
-		<li><a href="#">Фото и Видео</a></li>
-		<li><a href="#"><img src="https://via.placeholder.com/70" alt="Лого"></a></li>
-		<li><a href="#">Какрта штата</a></li>
-		<li><a href="#">Гостиницы</a></li>
-	</ul>
+	<nav>
+		<ul>
+			<li>
+				<a href="">Информация</a>
+			</li>
+			<li>
+				<a href="">Фото и Видео</a>
+			</li>
+			<li>
+				<a href="">Какрта штата</a>
+			</li>
+			<li>
+				<a href="hotels.html">Гостиницы</a>
+			</li>
+		</ul>
+		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+	</nav>
 </header>
 <main>
-	<article>
-		<p>
-			<span>WELCOME</span>
-			<span>to the gorgeos</span>
-		</p>
-	<h1>SEDONA</h1>
-		<p>Because the Grand Canyon sucks!</p>
-	</article>
+
+	<img src="https://via.placeholder.com/150x100">
+	
 	<div>
 	<h2>Описание</h2>
-		<p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+		<h1>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
 		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 	</div>
+	
 	<div>
 	<h2>Бронь</h2>
 		<p>Заинтересовались?</p>
@@ -35,7 +43,7 @@
 		
 		<div>
 		<p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</p>
-		<form>
+		<!--<form>
 		<label for="in">ДАТА ЗАЕЗДА</label>
 		<input type="date" id="in">
 		<label for="out">ДАТА ВЫЕЗДА</label>
@@ -45,19 +53,27 @@
 		<label for="children">ДЕТИ</label>
 		<input type="number" id="children">
 		<input type="submit" value="Найти">
-		</form>
+		</form>-->
 		</div>
 	</div>
 </main>
 
 <footer>
-	<p>#VISITSEDONA<br> ТЕЛ:+7(495)666-02-66</p>
+	<p>#VISITSEDONA <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a></p>
+	
 	<ul>
-	<li><a href="#">твиттер</a></li>
-	<li><a href="#">фейсбук</a></li>
-	<li><a href="#">ютуб</a></li>
+		<li>
+			<a href="">твиттер</a>
+		</li>
+		<li>
+			<a href="">фейсбук</a>
+		</li>
+		<li>
+			<a href="">ютуб</a>
+		</li>
 	</ul>
-	<p>WEBSITE BY <a href="#"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
+	
+	<p>WEBSITE BY <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
 </footer>
 
   </body>
