--- a/hotels.html
+++ b/hotels.html
@@ -1,68 +1,85 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Отели</title>
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8">
+		<title>Отели</title>
+	</head>
+  
+<body>
+
 <header>
-	<ul>
-		<li><a href="#">Информация</a></li>
-		<li><a href="#">Фото и Видео</a></li>
-		<li><a href="#"><img src="https://via.placeholder.com/70" alt="Лого"></a></li>
-		<li><a href="#">Какрта штата</a></li>
-		<li><a href="#">Гостиницы</a></li>
-	</ul>
+	<nav>
+		<ul>
+			<li>
+				<a href="">Информация</a>
+			</li>
+			<li>
+				<a href="">Фото и Видео</a>
+			</li>
+			<li>
+				<a href="">Какрта штата</a>
+			</li>
+			<li>
+				<a href="hotels.html">Гостиницы</a>
+			</li>
+		</ul>
+		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+	</nav>
 </header>
 
 <main>
 
 <div>
-	<ul>
-		<li><img src="https://via.placeholder.com/150x100" alt="Лого"></li>
-		<li>AMARA RESORT & SPA</li>
-		<li><span>ГОСТИНИЦА</span> ОТ 4000 ₽.</li>
-		<li><a href="#">ПОДРОБНЕЕ</a></li>
-		<li><a href="#">ЗАБРОНИРОВАТЬ</a></li>
-		<li>&#9733;&#9733;&#9733;&#9733;</li>
-		<li>РЕЙТИНГ:8,5</li>
+	<img src="https://via.placeholder.com/150x100" alt="Гостиница"></li>
+		<p>Amara resort & spa</p>
+		<p><span>Гостиница</span> От 4000 ₽.</p>
+		<a href="">Подробнее</a>
+		<a href="">Забронировать</a>
+		<img src="https://via.placeholder.com/100x10" alt="Лого"><!-- вместо звездочек-->
+		<span>РЕЙТИНГ:8,5</span>
 	</ul>
 </div>
 
 <div>
-	<ul>
-		<li><img src="https://via.placeholder.com/150x100" alt="Лого"></li>
-		<li>DESERT QUAIL INN</li>
-		<li><span>МОТЕЛЬ</span> ОТ 3000 ₽.</li>
-		<li><a href="#">ПОДРОБНЕЕ</a></li>
-		<li><a href="#">ЗАБРОНИРОВАТЬ</a></li>
-		<li>&#9733;&#9733;&#9733;</li>
-		<li>РЕЙТИНГ:8,9</li>
-	</ul>
+		<img src="https://via.placeholder.com/150x100" alt="Мотель"></li>
+		<p>Desrt quail inn</p>
+		<p><span>Мотель</span> От 3000 ₽.</p>
+		<a href="">Подробнее</a>
+		<a href="">Забронировать</a>
+		<img src="https://via.placeholder.com/70x10" alt="Лого">
+		<span>РЕЙТИНГ:8,9</span>
 </div>
 
 <div>
-	<ul>
-		<li><img src="https://via.placeholder.com/150x100" alt="Лого"></li>
-		<li>VILLAS POCO DIABLO</li>
-		<li><span>АПАРТАМЕНТЫ</span> ОТ 2000 ₽.</li>
-		<li><a href="#">ПОДРОБНЕЕ</a></li>
-		<li><a href="#">ЗАБРОНИРОВАТЬ</a></li>
-		<li>&#9733;&#9733;</li>
-		<li>РЕЙТИНГ:9,5</li>
-	</ul>
+
+		<img src="https://via.placeholder.com/150x100" alt="Апартаменты">
+		<p>Villas at poco diablo</p>
+		<p><span>Апартаменты</span> ОТ 2000 ₽.</p>
+		<a href="">Подробнее</a>
+		<a href="">Забронировать</a>
+		<img src="https://via.placeholder.com/40x10" alt="Лого">
+		<span>РЕЙТИНГ:9,5</span>
+
 </div>
 
 </main>
 
 <footer>
-	<p>#VISITSEDONA<br> ТЕЛ:+7(495)666-02-66</p>
+	<p>#VISITSEDONA <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a></p>
+	
 	<ul>
-	<li><a href="#">твиттер</a></li>
-	<li><a href="#">фейсбук</a></li>
-	<li><a href="#">ютуб</a></li>
+		<li>
+			<a href="">твиттер</a>
+		</li>
+		<li>
+			<a href="">фейсбук</a>
+		</li>
+		<li>
+			<a href="">ютуб</a>
+		</li>
 	</ul>
-	<p>WEBSITE BY <a href="#"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
+	
+	<p>WEBSITE BY <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
 </footer>
 
   </body>
