--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	
 <header>
+  
 	<nav>
 		<ul>
 			<li>
@@ -23,9 +24,13 @@
 				<a href="hotels.html">Гостиницы</a>
 			</li>
 		</ul>
+    
 		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+    
 	</nav>
+  
 </header>
+  
 <main>
 
 	<img src="https://via.placeholder.com/150x100">
@@ -40,8 +45,9 @@
 	<h2>Бронь</h2>
 		<p>Заинтересовались?</p>
 		<p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
-		
-		<div>
+	</div>
+  
+  <div>
 		<p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</p>
 		<!--<form>
 		<label for="in">ДАТА ЗАЕЗДА</label>
@@ -56,9 +62,11 @@
 		</form>-->
 		</div>
 	</div>
+  
 </main>
 
 <footer>
+  
 	<p>#VISITSEDONA <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a></p>
 	
 	<ul>
@@ -74,6 +82,7 @@
 	</ul>
 	
 	<p>WEBSITE BY <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
+  
 </footer>
 
   </body>
