--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
 	
 <header>
-  
 	<nav>
 		<ul>
 			<li>
@@ -24,31 +23,27 @@
 				<a href="hotels.html">Гостиницы</a>
 			</li>
 		</ul>
-    
 		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
-    
 	</nav>
-  
 </header>
-  
-<main>
 
-	<img src="https://via.placeholder.com/150x100">
+<main>
+	<div>
+		<img src="https://via.placeholder.com/150x100" alt="">
+	</div>	
 	
 	<div>
-	<h2>Описание</h2>
-		<h1>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
-		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+			<h1>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
+				<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 	</div>
 	
 	<div>
-	<h2>Бронь</h2>
 		<p>Заинтересовались?</p>
 		<p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
 	</div>
-  
-  <div>
-		<p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</p>
+	
+	<div>
+		<p>Поиск гостиницы в седоне</p>
 		<!--<form>
 		<label for="in">ДАТА ЗАЕЗДА</label>
 		<input type="date" id="in">
@@ -60,14 +55,13 @@
 		<input type="number" id="children">
 		<input type="submit" value="Найти">
 		</form>-->
-		</div>
 	</div>
-  
 </main>
 
 <footer>
-  
-	<p>#VISITSEDONA <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a></p>
+	<p>#VISITSEDONA 
+		<a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
+	</p>
 	
 	<ul>
 		<li>
@@ -81,8 +75,11 @@
 		</li>
 	</ul>
 	
-	<p>WEBSITE BY <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
-  
+	<p>WEBSITE BY 
+		<a href="https://htmlacademy.ru/intensive/htmlcss">
+			<img src="https://via.placeholder.com/70" alt="Лого">
+		</a>
+	</p>
 </footer>
 
   </body>
