--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,6 @@
 <body>
 
 <header>
-  
 	<nav>
 		<ul>
 			<li>
@@ -24,50 +23,48 @@
 				<a href="hotels.html">Гостиницы</a>
 			</li>
 		</ul>
-    
 		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
-    
 	</nav>
-  
 </header>
 
 <main>
 
-<div>
-	<img src="https://via.placeholder.com/150x100" alt="Гостиница"></li>
-		<p>Amara resort & spa</p>
-		<p><span>Гостиница</span> От 4000 ₽.</p>
-		<a href="">Подробнее</a>
-		<a href="">Забронировать</a>
-		<img src="https://via.placeholder.com/100x10" alt="Лого"><!-- вместо звездочек-->
-		<span>РЕЙТИНГ:8,5</span>
-</div>
+<article>
+	<img src="https://via.placeholder.com/150x100" alt="Гостиница">
+	<p>Amara resort & spa</p>
+	<p><span>Гостиница</span> От 4000 ₽.</p>
+	<a href="">Подробнее</a>
+	<a href="">Забронировать</a>
+	<p>Четыре звезды</p>
+	<span>Рейтинг:8,5</span>
+</article>
 
-<div>
-		<img src="https://via.placeholder.com/150x100" alt="Мотель"></li>
-		<p>Desrt quail inn</p>
-		<p><span>Мотель</span> От 3000 ₽.</p>
-		<a href="">Подробнее</a>
-		<a href="">Забронировать</a>
-		<img src="https://via.placeholder.com/70x10" alt="Лого">
-		<span>РЕЙТИНГ:8,9</span>
-</div>
+<article>
+	<img src="https://via.placeholder.com/150x100" alt="Мотель">
+	<p>Desrt quail inn</p>
+	<p><span>Мотель</span> От 3000 ₽.</p>
+	<a href="">Подробнее</a>
+	<a href="">Забронировать</a>
+	<p>Три звезды</p>
+	<span>Рейтинг:8,9</span>
+</article>
 
-<div>
-		<img src="https://via.placeholder.com/150x100" alt="Апартаменты">
-		<p>Villas at poco diablo</p>
-		<p><span>Апартаменты</span> ОТ 2000 ₽.</p>
-		<a href="">Подробнее</a>
-		<a href="">Забронировать</a>
-		<img src="https://via.placeholder.com/40x10" alt="Лого">
-		<span>РЕЙТИНГ:9,5</span>
-</div>
+<article>
+	<img src="https://via.placeholder.com/150x100" alt="Апартаменты">
+	<p>Villas at poco diablo</p>
+	<p><span>Апартаменты</span> ОТ 2000 ₽.</p>
+	<a href="">Подробнее</a>
+	<a href="">Забронировать</a>
+	<p>Две звезды</p>
+	<span>Рейтинг:9,5</span>
+</article>
 
 </main>
 
 <footer>
-  
-	<p>#VISITSEDONA <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a></p>
+	<p>#VISITSEDONA 
+		<a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
+	</p>
 	
 	<ul>
 		<li>
@@ -81,8 +78,11 @@
 		</li>
 	</ul>
 	
-	<p>WEBSITE BY <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/70" alt="Лого"></a></p>
-  
+	<p>WEBSITE BY 
+		<a href="https://htmlacademy.ru/intensive/htmlcss">
+			<img src="https://via.placeholder.com/70" alt="Лого">
+		</a>
+	</p>
 </footer>
 
   </body>
