--- a/hotels.html
+++ b/hotels.html
@@ -4,86 +4,93 @@
 		<meta charset="utf-8">
 		<title>Отели</title>
 	</head>
-  
 <body>
-
-<header>
-	<nav>
-		<ul>
-			<li>
-				<a href="">Информация</a>
-			</li>
-			<li>
-				<a href="">Фото и Видео</a>
-			</li>
-			<li>
-				<a href="">Какрта штата</a>
-			</li>
-			<li>
-				<a href="hotels.html">Гостиницы</a>
-			</li>
-		</ul>
-		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
-	</nav>
-</header>
-
+  <header>
+	  <nav>
+		  <ul>
+			  <li>
+				  <a href="">Информация</a>
+			  </li>
+			  <li>
+				  <a href="">Фото и Видео</a>
+			  </li>
+			  <li>
+				  <a href="">Какрта штата</a>
+			  </li>
+			  <li>
+				  <a href="hotels.html">Гостиницы</a>
+			  </li>
+		  </ul>
+		  <a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+	  </nav>
+  </header>
 <main>
 
-<article>
-	<img src="https://via.placeholder.com/150x100" alt="Гостиница">
-	<p>Amara resort & spa</p>
-	<p><span>Гостиница</span> От 4000 ₽.</p>
-	<a href="">Подробнее</a>
-	<a href="">Забронировать</a>
-	<p>Четыре звезды</p>
-	<span>Рейтинг:8,5</span>
-</article>
+  <article>
+    <h1>Гостиница</h1>  <!--поставил h1 т.к. больше заголовков на странице нет, h2 же не ставится до h1.-->
+	  <img src="https://via.placeholder.com/150x100" alt="Гостиница">
+	  <p>Amara resort & spa</p>
+	  <p>Гостиница 
+      <a href="">Подробнее</a>
+    </p>
+	  <p>От 4000 ₽. 
+      <a href="">Забронировать</a>
+    </p>
+	  <p>Четыре звезды</p>
+	  <p>Рейтинг:8,5</p>
+  </article>
 
-<article>
-	<img src="https://via.placeholder.com/150x100" alt="Мотель">
-	<p>Desrt quail inn</p>
-	<p><span>Мотель</span> От 3000 ₽.</p>
-	<a href="">Подробнее</a>
-	<a href="">Забронировать</a>
-	<p>Три звезды</p>
-	<span>Рейтинг:8,9</span>
-</article>
+  <article>
+    <h1>Мотель</h1>
+	  <img src="https://via.placeholder.com/150x100" alt="Мотель">
+	  <p>Desrt quail inn</p>
+	  <p>Мотель 
+      <a href="">Подробнее</a>
+    </p>
+	  <p>От 3000 ₽. 
+      <a href="">Забронировать</a>
+    </p>
+	  <p>Три звезды</p>
+	  <p>Рейтинг:8,9</p>
+  </article>
 
-<article>
-	<img src="https://via.placeholder.com/150x100" alt="Апартаменты">
-	<p>Villas at poco diablo</p>
-	<p><span>Апартаменты</span> ОТ 2000 ₽.</p>
-	<a href="">Подробнее</a>
-	<a href="">Забронировать</a>
-	<p>Две звезды</p>
-	<span>Рейтинг:9,5</span>
-</article>
+  <article>
+    <h1>Апартаменты</h1>
+	  <img src="https://via.placeholder.com/150x100" alt="Апартаменты">
+	  <p>Villas at poco diablo</p>
+    <p>Апартаменты 
+      <a href="">Подробнее</a>
+    </p>
+	  <p>От 2000 ₽. 
+      <a href="">Забронировать</a>
+    </p>
+	  <p>Две звезды</p>
+	  <p>Рейтинг:9,5</p>
+  </article>
 
 </main>
-
-<footer>
-	<p>#VISITSEDONA 
-		<a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
-	</p>
+  <footer>
+	  <p>#visitsedona
+		  <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
+	  </p>
 	
-	<ul>
-		<li>
-			<a href="">твиттер</a>
-		</li>
-		<li>
-			<a href="">фейсбук</a>
-		</li>
-		<li>
-			<a href="">ютуб</a>
-		</li>
-	</ul>
+	  <ul>
+		  <li>
+			  <a href="">твиттер</a>
+		  </li>
+		  <li>
+			  <a href="">фейсбук</a>
+		  </li>
+		  <li>
+			  <a href="">ютуб</a>
+		  </li>
+	  </ul>
 	
-	<p>WEBSITE BY 
-		<a href="https://htmlacademy.ru/intensive/htmlcss">
-			<img src="https://via.placeholder.com/70" alt="Лого">
-		</a>
-	</p>
-</footer>
-
-  </body>
+	  <p>website by 
+		  <a href="https://htmlacademy.ru/intensive/htmlcss">
+			  <img src="https://via.placeholder.com/70" alt="Лого">
+		  </a>
+	  </p>
+  </footer>
+ </body>
 </html>
