--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 	
 <body>
 	
-<header>
-	<nav>
-		<ul>
-			<li>
-				<a href="">Информация</a>
-			</li>
-			<li>
-				<a href="">Фото и Видео</a>
-			</li>
-			<li>
-				<a href="">Какрта штата</a>
-			</li>
-			<li>
-				<a href="hotels.html">Гостиницы</a>
-			</li>
-		</ul>
-		<a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
-	</nav>
-</header>
+  <header>
+	  <nav>
+		  <ul>
+			  <li>
+				  <a href="">Информация</a>
+			  </li>
+			  <li>
+				  <a href="">Фото и Видео</a>
+			  </li>
+			  <li>
+				  <a href="">Какрта штата</a>
+			  </li>
+			  <li>
+				  <a href="hotels.html">Гостиницы</a>
+			  </li>
+		  </ul>
+		    <a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+	  </nav>
+  </header>
 
 <main>
 	<div>
@@ -33,7 +33,7 @@
 	</div>	
 	
 	<div>
-			<h1>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
+			<h1>Седона — небольшой городок в Аризоне,заслуживающий большего!</h1>
 				<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 	</div>
 	
@@ -59,7 +59,7 @@
 </main>
 
 <footer>
-	<p>#VISITSEDONA 
+	<p>#visitsedona
 		<a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
 	</p>
 	
@@ -75,7 +75,7 @@
 		</li>
 	</ul>
 	
-	<p>WEBSITE BY 
+	<p>website by
 		<a href="https://htmlacademy.ru/intensive/htmlcss">
 			<img src="https://via.placeholder.com/70" alt="Лого">
 		</a>
