--- a/hotels.html
+++ b/hotels.html
@@ -15,7 +15,7 @@
 				  <a href="">Фото и Видео</a>
 			  </li>
 			  <li>
-				  <a href="">Какрта штата</a>
+				  <a href="">Карта штата</a>
 			  </li>
 			  <li>
 				  <a href="hotels.html">Гостиницы</a>
@@ -25,45 +25,36 @@
 	  </nav>
   </header>
 <main>
-
+  <h1>Перечень мест для проживания</h1>
   <article>
-    <h1>Гостиница</h1>  <!--поставил h1 т.к. больше заголовков на странице нет, h2 же не ставится до h1.-->
+    <h2>Информация о Amara resort & spa</h2>  <!--информативнее заголовок не придумывается -->
 	  <img src="https://via.placeholder.com/150x100" alt="Гостиница">
 	  <p>Amara resort & spa</p>
-	  <p>Гостиница 
-      <a href="">Подробнее</a>
-    </p>
-	  <p>От 4000 ₽. 
-      <a href="">Забронировать</a>
-    </p>
+	  <p><span>Гостиница</span> От 4000 ₽.</p>
+	  <a href="">Подробнее</a>
+	  <a href="">Забронировать</a>
 	  <p>Четыре звезды</p>
 	  <p>Рейтинг:8,5</p>
   </article>
 
   <article>
-    <h1>Мотель</h1>
+    <h2>Информация о Desrt quail inn</h2>
 	  <img src="https://via.placeholder.com/150x100" alt="Мотель">
 	  <p>Desrt quail inn</p>
-	  <p>Мотель 
-      <a href="">Подробнее</a>
-    </p>
-	  <p>От 3000 ₽. 
-      <a href="">Забронировать</a>
-    </p>
+	  <p><span>Мотель</span> От 3000 ₽.</p>
+	  <a href="">Подробнее</a>
+	  <a href="">Забронировать</a>
 	  <p>Три звезды</p>
 	  <p>Рейтинг:8,9</p>
   </article>
 
   <article>
-    <h1>Апартаменты</h1>
+    <h2>Иформация о Villas at poco diablo</h2>
 	  <img src="https://via.placeholder.com/150x100" alt="Апартаменты">
 	  <p>Villas at poco diablo</p>
-    <p>Апартаменты 
-      <a href="">Подробнее</a>
-    </p>
-	  <p>От 2000 ₽. 
-      <a href="">Забронировать</a>
-    </p>
+    <p><span>Апартаменты</span> ОТ 2000 ₽.</p>
+	  <a href="">Подробнее</a>
+	  <a href="">Забронировать</a>
 	  <p>Две звезды</p>
 	  <p>Рейтинг:9,5</p>
   </article>
