--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				  <a href="">Фото и Видео</a>
 			  </li>
 			  <li>
-				  <a href="">Какрта штата</a>
+				  <a href="">Карта штата</a>
 			  </li>
 			  <li>
 				  <a href="hotels.html">Гостиницы</a>
@@ -30,8 +30,8 @@
 	</div>	
 	
 	<div>
-			<h1>Седона — небольшой городок в Аризоне,заслуживающий большего!</h1>
-				<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+	  <h1>Седона — небольшой городок в Аризоне,заслуживающий большего!</h1>
+			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 	</div>
 	
 	<div>
