--- a/hotels.html
+++ b/hotels.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Отели</title>
 	</head>
-<body>
+ <body>
   <header>
 	  <nav>
 		  <ul>
@@ -21,13 +21,15 @@
 				  <a href="hotels.html">Гостиницы</a>
 			  </li>
 		  </ul>
-		    <a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+		  <a href="index.html">
+          <img src="https://via.placeholder.com/70" alt="Лого">
+      </a>
 	  </nav>
-  </header>
+    </header>
 <main>
   <h1>Перечень мест для проживания</h1>
   <article>
-    <h2>Информация о Amara resort & spa</h2>  <!--информативнее заголовок не придумывается -->
+    <h2>Отдых люкс класса</h2>  <!--информативнее заголовок не придумывается -->
 	  <img src="https://via.placeholder.com/150x100" alt="Гостиница">
 	  <p>Amara resort & spa</p>
 	  <p><span>Гостиница</span> От 4000 ₽.</p>
@@ -38,9 +40,9 @@
   </article>
 
   <article>
-    <h2>Информация о Desrt quail inn</h2>
+    <h2>Отдых среднего класса</h2>
 	  <img src="https://via.placeholder.com/150x100" alt="Мотель">
-	  <p>Desrt quail inn</p>
+	  <p>Desert quail inn</p>
 	  <p><span>Мотель</span> От 3000 ₽.</p>
 	  <a href="">Подробнее</a>
 	  <a href="">Забронировать</a>
@@ -49,7 +51,7 @@
   </article>
 
   <article>
-    <h2>Иформация о Villas at poco diablo</h2>
+    <h2>Отдых эконом класса</h2>
 	  <img src="https://via.placeholder.com/150x100" alt="Апартаменты">
 	  <p>Villas at poco diablo</p>
     <p><span>Апартаменты</span> ОТ 2000 ₽.</p>
@@ -62,7 +64,7 @@
 </main>
   <footer>
 	  <p>#visitsedona
-		  <a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
+		  <a href="tel:74956660266">тел:+7(495)666-02-66</a>
 	  </p>
 	
 	  <ul>
@@ -83,5 +85,5 @@
 		  </a>
 	  </p>
   </footer>
- </body>
+  </body>
 </html>
