--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 				  <a href="hotels.html">Гостиницы</a>
 			  </li>
 		  </ul>
-		    <a href="index.html"><img src="https://via.placeholder.com/70" alt="Лого"></a>
+		  <a href="index.html">
+        <img src="https://via.placeholder.com/70" alt="Лого">
+      </a>
 	  </nav>
   </header>
 <main>
@@ -56,7 +58,7 @@
 </main>
 <footer>
 	<p>#visitsedona
-		<a href="tel:74956660266">ТЕЛ:+7(495)666-02-66</a>
+		<a href="tel:74956660266">тел:+7(495)666-02-66</a>
 	</p>
 	
 	<ul>
