--- a/hotels.html
+++ b/hotels.html
@@ -28,6 +28,15 @@
     </header>
     <main>
       <h1>Перечень мест для проживания</h1>
+      <div><!--фильтр жилья-->
+    <!--<h2>Инфраструктура:</h2>
+          <form>
+            <input type="checkbox"> Бассейн
+            <input type="checkbox"> Парковка
+            <input type="checkbox"> Wi-fi
+          </form>
+        -->
+      </div>
       <article>
 	      <img src="https://via.placeholder.com/150x100" alt="Гостиница">
 	      <h2>Amara resort & spa</h2>
