--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <p>Не только китайского, но и местного производства!</p>
             </li>
             <li>
-              <h3>Там есть мост<br> дьявола</h3>
+              <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </li>
