--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			    </li>
 		    </ul>
 		    <a href="index.html">
-          <img src="https://via.placeholder.com/70" alt="Лого">
+          <img src="img/logo-sedona.svg" width="80px" height="80px" alt="Лого">
         </a>
 	    </nav>
     </header>
     <main>
 	    <div>
-		    <img src="https://via.placeholder.com/150x100" alt="">
+		    <img src="img/intro-welcome.svg" width="700px" height="400px" alt="Приветствие">
 	    </div>	
 	
 	    <div>
@@ -127,7 +127,7 @@
 	
 	    <p>website by
 		    <a href="https://htmlacademy.ru/intensive/htmlcss">
-			    <img src="https://via.placeholder.com/70" alt="Лого">
+			    <img src="img/logo-htmlacademy.svg" width="80px" height="80px" alt="Лого">
 		    </a>
 	    </p>
     </footer>
