--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-              <img src="https://via.placeholder.com/200х30" width="800px" height="400px"alt="Фото моста">
+              <img src="img/devil-canion.jpeg" width="800px" height="400px"alt="Фото моста">
             </li>
             <li>
               <h3>Небольшая площадь</h3>
@@ -104,7 +104,7 @@
 	    </div>
       
       <div>
-        <img src="https://via.placeholder.com/700х100" alt="Карта">
+        <img src="img/map.png" width="1400px" height="750" alt="Карта">
       </div>
       
     </main>
