--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h3>Настоящий городок</h3>
               <p>-№1-</p>
               <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="img/real-city/jpeg" width="800px" height="400px" alt="Фото города">
+              <img src="img/real-city/jpg" width="800px" height="400px" alt="Фото города">
             </li>
               <ul>
                 <li>
@@ -63,7 +63,7 @@
               <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-              <img src="img/devil-canion.jpeg" width="800px" height="400px"alt="Фото моста">
+              <img src="img/devil-canion.jpg" width="800px" height="400px"alt="Фото моста">
             </li>
             <li>
               <h3>Небольшая площадь</h3>
