--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h3>Настоящий городок</h3>
               <p>-№1-</p>
               <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="img/real-city/jpg" width="800px" height="400px" alt="Фото города">
+              <img src="img/real-city.jpg" width="800px" height="400px" alt="Фото города">
             </li>
               <ul>
                 <li>
