--- a/hotels.html
+++ b/hotels.html
@@ -22,7 +22,7 @@
 			    </li>
 		    </ul>
 		    <a href="index.html">
-          <img src="https://via.placeholder.com/70" alt="Лого">
+          <img src="img/logo-sedona.svg" width="100px" height="50px" alt="Лого">
         </a>
 	    </nav>
     </header>
@@ -38,32 +38,32 @@
         -->
       </div>
       <article>
-	      <img src="https://via.placeholder.com/150x100" alt="Гостиница">
+	      <img src="img/amara.jpg" alt="Гостиница">
 	      <h2>Amara resort & spa</h2>
 	      <p><span>Гостиница</span> От 4000 ₽.</p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
-	      <p>Четыре звезды</p>
+	      <img src="img/star.svg" alt="рейтинг">
 	      <p>Рейтинг:8,5</p>
       </article>
 
       <article>
-	      <img src="https://via.placeholder.com/150x100" alt="Мотель">
+	      <img src="img/desert.jpg" alt="Мотель">
 	      <h2>Desert quail inn</h2>
 	      <p><span>Мотель</span> От 3000 ₽.</p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
-	      <p>Три звезды</p>
+	      <img src="img/star.svg" alt="рейтинг">
 	      <p>Рейтинг:8,9</p>
       </article>
 
       <article>
-	      <img src="https://via.placeholder.com/150x100" alt="Апартаменты">
+	      <img src="img/villas.jpg" alt="Апартаменты">
 	      <h2>Villas at poco diablo</h2>
         <p><span>Апартаменты</span> ОТ 2000 ₽.</p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
-	      <p>Две звезды</p>
+	      <img src="img/star.svg" alt="рейтинг">
 	      <p>Рейтинг:9,5</p>
       </article>
 
@@ -87,7 +87,7 @@
 	
 	    <p>website by 
 		    <a href="https://htmlacademy.ru/intensive/htmlcss">
-			    <img src="https://via.placeholder.com/70" alt="Лого">
+			    <img src="img/logo-htmlacademy.svg" width="80px" height="80px" alt="Лого">
 		   </a>
 	    </p>
      </footer>
