--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-              <img src="img/devil-canion.jpg" width="800px" height="400px"alt="Фото моста">
+              <img src="img/devil's-canyon.jpg" width="800px" height="400px"alt="Фото моста">
             </li>
             <li>
               <h3>Небольшая площадь</h3>
@@ -127,7 +127,7 @@
 	
 	    <p>website by
 		    <a href="https://htmlacademy.ru/intensive/htmlcss">
-			    <img src="img/logo-htmlacademy.svg" width="80px" height="30px" alt="Лого">
+			    <img src="https://via.placeholder.com/70" alt="Лого">
 		    </a>
 	    </p>
     </footer>
