--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
               <h3>Настоящий городок</h3>
               <p>-№1-</p>
               <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="img/real-city.jpg" width="800px" height="400px" alt="Фото города">
-            </li>
+              <img src="img/real-city.jpg" width="800px" height="400px" alt="Фото города Седона">
               <ul>
                 <li>
                   <h3>Жильё</h3>
@@ -58,12 +57,13 @@
                   <h3>Сувениры</h3>
                   <p>Не только китайского, но и местного производства!</p>
                 </li>
-              </ul>    
+              </ul>
+            </li>
             <li>
               <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-              <img src="img/devil's-canyon.jpg" width="800px" height="400px"alt="Фото моста">
+              <img src="img/devil's-canyon.jpg" width="800px" height="400px"alt="Фото дьявольского моста">
             </li>
             <li>
               <h3>Небольшая площадь</h3>
@@ -104,7 +104,7 @@
 	    </div>
       
       <div>
-        <img src="img/map.png" width="1400px" height="750" alt="Карта">
+        <img src="img/map.jpg" width="1400px" height="750" alt="Карта"><!-- меньше весит картинка и там не так много цветов-->
       </div>
       
     </main>
