--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			    </li>
 		    </ul>
 		    <a href="index.html">
-          <img src="img/logo-sedona.svg" width="100px" height="50px" alt="Лого">
+          <img src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
         </a>
 	    </nav>
     </header>
     <main>
 	    <div>
-		    <img src="img/intro-welcome.svg" width="459px" height="353px" alt="Приветствие">
+		    <img src="img/intro-welcome.svg" width="459" height="353" alt="Приветствие">
 	    </div>	
 	
 	    <div>
@@ -43,7 +43,7 @@
               <h3>Настоящий городок</h3>
               <p>-№1-</p>
               <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="img/real-city.jpg" width="800px" height="400px" alt="Фото города Седона">
+              <img src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
               <ul>
                 <li>
                   <h3>Жильё</h3>
@@ -63,7 +63,7 @@
               <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-              <img src="img/devil's-canyon.jpg" width="800px" height="400px"alt="Фото дьявольского моста">
+              <img src="img/devil's-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
             </li>
             <li>
               <h3>Небольшая площадь</h3>
@@ -104,7 +104,7 @@
 	    </div>
       
       <div>
-        <img src="img/map.jpg" width="1400px" height="750" alt="Карта"><!-- меньше весит картинка и там не так много цветов-->
+        <img src="img/map.jpg" width="1400" height="750" alt="Карта"><!-- меньше весит картинка и там не так много цветов-->
       </div>
       
     </main>
