--- a/hotels.html
+++ b/hotels.html
@@ -22,7 +22,7 @@
 			    </li>
 		    </ul>
 		    <a href="index.html">
-          <img src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
+         <img src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
         </a>
 	    </nav>
     </header>
@@ -40,7 +40,9 @@
       <article>
 	      <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
 	      <h2>Amara resort & spa</h2>
-	      <p><span>Гостиница</span> От 4000 ₽.</p>
+	      <p>
+          <span>Гостиница</span> От 4000 ₽.
+        </p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
 	      <p>Четыре звезды</p>
@@ -50,7 +52,9 @@
       <article>
 	      <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
 	      <h2>Desert quail inn</h2>
-	      <p><span>Мотель</span> От 3000 ₽.</p>
+	      <p>
+          <span>Мотель</span> От 3000 ₽.
+        </p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
 	      <p>Три звезды</p>
@@ -60,7 +64,9 @@
       <article>
 	      <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
 	      <h2>Villas at poco diablo</h2>
-        <p><span>Апартаменты</span> ОТ 2000 ₽.</p>
+        <p>
+          <span>Апартаменты</span> ОТ 2000 ₽.
+        </p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
 	      <p> Две звезды</p>
@@ -86,8 +92,8 @@
 	    </ul>
 	
 	    <p>website by 
-		    <a href="https://htmlacademy.ru/intensive/htmlcss">
-			    <img src="https://via.placeholder.com/70" alt="Лого">
+		   <a href="https://htmlacademy.ru/intensive/htmlcss">
+			   <img src="https://via.placeholder.com/70" alt="Лого">
 		   </a>
 	    </p>
      </footer>
