--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
               <p>-№1-</p>
               <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
               <img src="https://via.placeholder.com/200х30" alt="Фото города">
-            </li>
               <ul>
                 <li>
                   <h3>Жильё</h3>
@@ -58,7 +57,8 @@
                   <h3>Сувениры</h3>
                   <p>Не только китайского, но и местного производства!</p>
                 </li>
-              </ul>    
+              </ul>
+            </li>
             <li>
               <h3>Там есть<br> мост дьявола</h3>
               <p>-№2-</p>
@@ -115,20 +115,18 @@
 	
 	    <ul>
 		    <li>
-			    <a href="">твиттер</a>
+			    <a href="" aria-label="Твиттер"></a>
 		    </li>
 		    <li>
-			    <a href="">фейсбук</a>
+			    <a href="" aria-label="Фейсбук"></a>
 		    </li>
 		    <li>
-			    <a href="">ютуб</a>
+			    <a href="" aria-label="Ютуб"></a>
 		    </li>
 	    </ul>
 	
 	    <p>website by
-		    <a href="https://htmlacademy.ru/intensive/htmlcss">
-			    <img src="https://via.placeholder.com/70" alt="Лого">
-		    </a>
+		    <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Логотип Академии"></a> 
 	    </p>
     </footer>
  </body>
