--- a/hotels.html
+++ b/hotels.html
@@ -81,20 +81,18 @@
 	
 	    <ul>
 		    <li>
-			    <a href="">твиттер</a>
+			    <a href="" aria-label="Твиттер"></a>
 		    </li>
 		    <li>
-			    <a href="">фейсбук</a>
+			    <a href="" aria-label="Фейсбук"></a>
 		    </li>
 		    <li>
-			    <a href="">ютуб</a>
+			    <a href="" aria-label="Ютуб"></a>
 		    </li>
 	    </ul>
 	
 	    <p>website by 
-		   <a href="https://htmlacademy.ru/intensive/htmlcss">
-			   <img src="https://via.placeholder.com/70" alt="Лого">
-		   </a>
+		    <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Логотип Академии"></a>
 	    </p>
      </footer>
   </body>
