--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
         	<p>Поиск гостиницы в седоне</p>
                   <form>
 		<p>
-		  <label for="out">ДАТА ЗАЕЗДА</label>
+		  <label for="out">Дата заезда</label>
 		    <input id="in" type="date" value="2017-04-22">
 		</p>
 		<p>
-		  <label for="out">ДАТА ВЫЕЗДА</label>
+		  <label for="out">Дата выезда</label>
 		    <input id="out" type="date" value="2017-07-04">
 		</p>
 		<p>
-		  <label for="adults">ВЗРОСЛЫЕ</label>
+		  <label for="adults">Взрослые</label>
 		    <button type="button">-</button>
 		      <input id="adults" type="number" min="0" max="99">
 		    <button type="button">+</button>
 
-		    <label for="child">ДЕТИ</label>
+		    <label for="child">Дети</label>
 		      <button type="button">-</button>
 		        <input id="child" type="number" min="0" max="99">
 		      <button type="button">+</button>
