--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	    </div>
       
 	    <section>
-        <h2>Преимущесва</h2>
+        <h2 class="visually-hidden">Преимущесва</h2>
           <ul>
             <li>
               <h3>Настоящий городок</h3>
