--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 				    <a href="">Фото и Видео</a>
 			    </li>
 			    <li>
-				    <a href="">Карта штата</a>
+				    <a href="">Карта штата dgkhhgdgd</a>
 			    </li>
 			    <li>
 				    <a href="hotels.html">Гостиницы</a>
 			    </li>
 		    </ul>
-        <a href="index.html">
-          <img src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
-        </a>
+			<a href="index.html">
+				<img src="img/logo-sedona.svg" width="100" height="50" alt="Лого">
+			</a>
 	    </nav>
     </header>
     <main>
