--- a/hotels.html
+++ b/hotels.html
@@ -28,22 +28,22 @@
     </header>
     <main>
       <h1 class="visually-hidden">Перечень мест для проживания</h1>
-      <div>
+       <div>
     	<h2 class="visually-hidden">Фильтр жилья</h2>
-          <form class="user" method="post" action="http://sedona.html">
+          <form class="user" method="get" action="https://echo.htmlacademy.ru">
           	<fieldset>
             	<legend>Инфраструктура:</legend>
             		<ul>
                     	<li>                		
-                		<input type="checkbox" name="pool" id="inf-pool">
+                		<input type="checkbox" name="pool" id="inf-pool" value="pool" checked>
                     		<label for="inf-pool">Бассейн</label>
                    		</li>
                     	<li>                		
-                 		<input type="checkbox" name="parking" id="inf-parking">
+                 		<input type="checkbox" name="parking" id="inf-parking" value="parking">
                         	<label for="inf-parking">Парковка</label>
                     	</li>
                     	<li>                		
-            			<input type="checkbox" name="wi-fi" id="inf-wi-fi">
+            			<input type="checkbox" name="wi-fi" id="inf-wi-fi" value="wi-fi">
                         	<label for="inf-wi-fi">Wi-fi</label>
                     	</li>
                		</ul>
@@ -53,15 +53,15 @@
                <legend>Тип жилья:</legend>
                		<ul>
                    		<li>                		
-                		<input type="checkbox" name="hotel" id="type-hotel">
+                		<input type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
                         	<label for="type-hotel">Гостиница</label>
                    		</li>
                    		<li>                		
-                 		<input type="checkbox" name="motel" id="type-motel">
+                 		<input type="checkbox" name="motel" id="type-motel" value="motel" checked>
                         	<label for="type-motel">Мотель</label>
                    		</li>
                    		<li>                		
-            			<input type="checkbox" name="apartments" id="type-apartments">
+            			<input type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
                         	<label for="type-apartments">Апартаменты</label>
                    		</li>
               		</ul>
@@ -74,35 +74,33 @@
 						<input name="flevel" id="flying" type="range" min="0" max="5000" value="0">
 				<button type="submit">Показать</button> 	
 			</fieldset>
+		  </form>
 			
-			<fieldset>
-				<legend>Cортировка:</legend>
-					<ul>
-						<li>
-							<label for="sort-price">По цене</label>
-						<input type="radio" name="sort" id="sort-price">
-						</li>
-						<li>
-							<label for="sort-type">По типу</label>
-						<input type="radio" name="sort" id="sort-type">
-						</li>
-						<li>
-							<label for="sort-rating">По рейтингу</label>
-						<input type="radio" name="sort" id="sort-rating">
-						</li>
-					</ul>
-				<button type="button" aria-label="Прокрутка вверх"></button>
-				<button type="button" aria-label="Прокрутка вниз"></button>
-			</fieldset>
-		   </form>		                 
+			<p>Cортировка:</p>>
+				<ul>
+					<li>
+						<a href="">По цене</a>						
+					</li>
+					<li>
+						<a href=""> По типу</a>						
+					</li>
+					<li>
+						<a href="">По рейтингу</a>					
+					</li>
+				</ul>
+			<button type="button" aria-label="Прокрутка вверх"></button>
+			<button type="button" aria-label="Прокрутка вниз"></button>
+				                 
 	  </div>
 	  
       <article>
 	      <img src="img/amara.jpg" width="135" height="90" alt="Фото гостиницы Amara resort & spa">
-	      <h2>Amara resort & spa</h2>
+	    	<h2>
+				<a href="">Amara resort & spa</a>
+			</h2>>
 	      <p>
           <span>Гостиница</span> От 4000 ₽.
-        </p>
+          </p>
 	      <a href="">Подробнее</a>
 	      <a href="">Забронировать</a>
 	      <p>Четыре звезды</p>
@@ -111,7 +109,9 @@
 
       <article>
 	      <img src="img/desert.jpg" width="135" height="90" alt="Фото мотеля Desert quail inn">
-	      <h2>Desert quail inn</h2>
+	    	<h2>
+				<a href="">Desert quail inn</a>
+			</h2>>
 	      <p>
           <span>Мотель</span> От 3000 ₽.
         </p>
@@ -123,7 +123,9 @@
 
       <article>
 	      <img src="img/villas.jpg" width="135" height="90" alt="Фото апартаментов Villas at poco diablo">
-	      <h2>Villas at poco diablo</h2>
+	    	<h2>
+				<a href="">Villas at poco diablo</a>
+			</h2>>
         <p>
           <span>Апартаменты</span> ОТ 2000 ₽.
         </p>
@@ -152,7 +154,7 @@
 	    </ul>
 	
 	    <p>website by 
-		    <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Логотип Академии"></a>
+		    <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на академию"></a>
 	    </p>
      </footer>
   </body>
