--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
 	    </div>
 	
 	    <div>
-        	<button type="button">Поиск гостиницы в седоне</button>
+        	<button type="button">Поиск гостиницы в Седоне</button>
                 <form class="user" method="get" action="https://echo.htmlacademy.ru">
 			<p>
 		  <label for="date-in">Дата заезда</label>
 		    <input type="text" id="date-in" name="in" placeholder="2017-04-22">
-			<button type="button" aria-label="Календарь для события"></button>
+			<button type="button" aria-label="Календарь для даты заезда"></button>
 			</p>
 			<p>
 		  <label for="date-out">Дата выезда</label>
 		    <input type="text" id="date-out" placeholder="2017-07-04">
-			<button type="button" aria-label="Календарь для события"></button>
+			<button type="button" aria-label="Календарь для даты выезда"></button>
 			</p>  
 			<p>
 		  <label for="sum-adults">Взрослые</label>
@@ -110,7 +110,7 @@
 		    <label for="sum-child">Дети</label>
 		      <button type="button" aria-label="Уменьшение кол-ва детей">-</button>
 		        <input type="text" id="sum-child" name="child" placeholder="0">
-		      <button type="button" aria-label="Увеличение кол-ва взрослых">+</button>
+		      <button type="button" aria-label="Увеличение кол-ва детей">+</button>
 				
 		</p>
 			<button type="submit">Найти</button>
