--- a/hotels.html
+++ b/hotels.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Отели</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
